[package]
name = "ganttless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde = {version = "1.0.133", features = ["derive"]}
thiserror = "1.0.30"
anyhow = "1.0.53"
serde_yaml = "0.8.23"
chrono = "0.4.19"
toml = "0.5.8"
